# yafetch

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  afetch  afetch.cpp  config.h  flake.nix  shell.nix  yafetch.cpp  yafetch.h
ascii/: LICENSE_UFETCH  arch.h  artix.h  debian.h  gentoo.h  mint.h  nixos.h  parabola.h  tux.h  ubuntu.h  void.h
src/: yafetch.cpp  yafetch.h
src/ascii/: arch.h  gnu.h  mint.h  nixos.h  tux.h  ubuntu.h
